--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcc 'BV'
 - !lcsh 'Church music -- Protestant churches'
 - !lcsh 'Hymns'
+- GITenberg
 title: A Practical Discourse on Some Principles of Hymn-Singing
 url: http://www.gutenberg.org/ebooks/21722
